--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,10 @@
       }
       gtag("js", new Date());
 
-      gtag("config", "G-XYKXN12Q28");
+      gtag("config", "G-XYKXN12Q28", {
+        cookie_domain: "https://notanotherfocustimer.vercel.app/",
+        cookie_flags: "SameSite=None;Secure",
+      });
     </script>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
