Fixed invalid domain issues

--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
       gtag("js", new Date());
 
       gtag("config", "G-XYKXN12Q28", {
-        cookie_domain: "https://notanotherfocustimer.vercel.app/",
+        cookie_domain: "notanotherfocustimer.vercel.app",
         cookie_flags: "SameSite=None;Secure",
       });
     </script>
